<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.imagesearchapp.presentation.userscreen.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.userscreen.UserFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/iv_userImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintDimensionRatio="1:1"
            app:cardElevation="26dp"
            app:cardCornerRadius="28dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="User Image"
                app:userImage="@{viewModel.user.profileImage.large}"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_name"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="?attr/colorPrimaryDark"
            android:text="@{viewModel.user.name}"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/txt_bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_userImage"
            app:layout_constraintTop_toTopOf="@+id/iv_userImage"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/txt_bio"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:textColor="?attr/colorPrimaryDark"
            android:text="@{viewModel.user.bioNotNull}"
            app:layout_constraintBottom_toTopOf="@id/txt_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_userImage"
            app:layout_constraintTop_toBottomOf="@+id/txt_name"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/txt_location"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="?attr/colorPrimaryDark"
            android:text="@{viewModel.user.viewLocation}"
            app:drawableStartCompat="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="@+id/iv_userImage"
            app:layout_constraintStart_toEndOf="@+id/iv_userImage"
            app:layout_constraintTop_toBottomOf="@+id/txt_bio"
            tools:text="@tools:sample/cities" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.26036483" />

        <TextView
            android:id="@+id/txt_line1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <TextView
            android:id="@+id/txt_posts_view"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts"
            android:textColor="?attr/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/txt_posts"
            app:layout_constraintEnd_toStartOf="@+id/txt_followers_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_line1" />

        <TextView
            android:id="@+id/txt_followers_view"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textColor="?attr/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/txt_followers"
            app:layout_constraintEnd_toStartOf="@+id/txt_following_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_posts_view"
            app:layout_constraintTop_toBottomOf="@+id/txt_line1" />

        <TextView
            android:id="@+id/txt_following_view"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textColor="?attr/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/txt_following"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_followers_view"
            app:layout_constraintTop_toBottomOf="@+id/txt_line1" />

        <TextView
            android:id="@+id/txt_posts"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="?attr/colorPrimaryDark"
            android:text="@{String.valueOf(viewModel.user.totalPhotos)}"
            app:layout_constraintBottom_toTopOf="@id/guideline6"
            app:layout_constraintEnd_toEndOf="@+id/txt_posts_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_posts_view"
            app:layout_constraintTop_toBottomOf="@+id/txt_posts_view"
            tools:text="@tools:sample/us_zipcodes" />

        <TextView
            android:id="@+id/txt_followers"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="?attr/colorPrimaryDark"
            android:text="@{String.valueOf(viewModel.user.followersCount)}"
            app:layout_constraintBottom_toTopOf="@id/guideline6"
            app:layout_constraintEnd_toEndOf="@+id/txt_followers_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_followers_view"
            app:layout_constraintTop_toBottomOf="@+id/txt_followers_view"
            tools:text="@tools:sample/us_zipcodes" />

        <TextView
            android:id="@+id/txt_following"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="?attr/colorPrimaryDark"
            android:text="@{String.valueOf(viewModel.user.followingCount)}"
            app:layout_constraintBottom_toTopOf="@id/guideline6"
            app:layout_constraintEnd_toEndOf="@+id/txt_following_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txt_following_view"
            app:layout_constraintTop_toBottomOf="@+id/txt_following_view"
            tools:text="@tools:sample/us_zipcodes" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.38" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_user_photos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            android:orientation="vertical"
            tools:itemCount="5"
            tools:listitem="@layout/item_user_images" />


        <TextView
            android:id="@+id/text_view_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results_could_not_be_loaded"
            android:visibility="gone"
            android:textColor="?attr/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/button_retry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline6"
            app:layout_constraintVertical_chainStyle="packed"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:visibility="gone"
            android:backgroundTint="?attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_error"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_view_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_results_found_for_this_query"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>